--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.App {
-  text-align: center;
+/* .App {
+  display:flex;
+  flex-direction: column;
+  
 }
 
 .App-logo {
@@ -35,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
